--- a/src/security-server/edc/runtime/control-plane/src/main/resources/application.yaml
+++ b/src/security-server/edc/runtime/control-plane/src/main/resources/application.yaml
@@ -23,6 +23,7 @@ xroad:
 
 #EDC conf
 edc:
+  hostname: ${EDC_HOSTNAME}
   extension:
     spring-bridge:
       serverconf:
@@ -39,7 +40,7 @@ edc:
       alias: public-key
   dsp:
     callback:
-      address: https://${EDC_HOSTNAME}:9194/protocol
+      address: https://${edc.hostname}:9194/protocol
   edr:
     receiver:
       sync: true
@@ -66,8 +67,11 @@ edc:
       enabled: true
   vault:
     hashicorp:
-      url: http://openbao:8200
-      token: 00000000-0000-0000-0000-000000000001
+      url: ${XROAD_SECRET_STORE_SCHEME:http}://${XROAD_SECRET_STORE_HOST:127.0.0.1}:${XROAD_SECRET_STORE_PORT:8200}
+      token: ${XROAD_SECRET_STORE_TOKEN}
+      api:
+        secret:
+          path: v1/xrd-ds-secret
   negotiation:
     state-machine:
       iteration-wait-millis: 300
