--- a/src/security-server/edc/runtime/data-plane/src/main/resources/application.yaml
+++ b/src/security-server/edc/runtime/data-plane/src/main/resources/application.yaml
@@ -53,6 +53,7 @@ web:
         needClientAuth: true
 
 edc:
+  hostname: ${EDC_HOSTNAME}
   extension:
     spring-bridge:
       serverconf:
@@ -74,13 +75,16 @@ edc:
   dataplane:
     token:
       validation:
-        endpoint: https://${EDC_HOSTNAME}:9192/control/token
+        endpoint: https://${edc.hostname}:9192/control/token
   dpf:
     selector:
-      url: https://${EDC_HOSTNAME}:9192/control/v1/dataplanes
+      url: https://${edc.hostname}:9192/control/v1/dataplanes
   vault:
     hashicorp:
-      url: http://openbao:8200
-      token: 00000000-0000-0000-0000-000000000001
+      url: ${XROAD_SECRET_STORE_SCHEME:http}://${XROAD_SECRET_STORE_HOST:127.0.0.1}:${XROAD_SECRET_STORE_PORT:8200}
+      token: ${XROAD_SECRET_STORE_TOKEN}
+      api:
+        secret:
+          path: v1/xrd-ds-secret
   state-machine:
     iteration-wait-millis: 300
