chore: include UI unit tests to Gradle test tasks goals

--- a/src/shared-ui/build.gradle
+++ b/src/shared-ui/build.gradle
@@ -31,6 +31,12 @@ tasks.register('checkFrontAudit', RunPnpmTaskType) {
 
     args = 'run npx-check-audit'
 }
+
+tasks.register('test', RunPnpmTaskType) {
+    dependsOn installFrontend
+    args = 'run test-ss'
+}
+
 if (project.hasProperty('frontend-npm-audit')) {
     assemble.dependsOn checkFrontAudit
 }
