--- a/src/security-server/admin-service/ui/package.json
+++ b/src/security-server/admin-service/ui/package.json
@@ -8,7 +8,7 @@
     "build": "pnpm run generate-types && vitest --run && vite build",
     "preview": "vite preview",
     "build-only": "vite build",
-    "test": "vitest",
+    "test": "vitest run",
     "type-check": "vue-tsc --noEmit -p tsconfig.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts  --fix --ignore-path .gitignore",
     "generate-types": "rm -rf src/openapi-types && openapi --input ../../openapi-model/src/main/resources/META-INF/openapi-definition.yaml --output ./src/openapi-types --exportCore false --exportServices false",
