refactor: refactor language switching
hide/show missing translations flag

Refs: XRDDEV-2728

--- a/src/security-server/admin-service/ui/.env.production
+++ b/src/security-server/admin-service/ui/.env.production
@@ -1,3 +1,5 @@
 # production is packaged inside spring boot app
 VITE_VUE_APP_BASE_URL=/api/v1
 VITE_VUE_APP_AUTH_URL=/
+
+VITE_WARN_MISSING_TRANSLATION=false
