--- a/src/central-server/admin-service/ui/.env
+++ b/src/central-server/admin-service/ui/.env
@@ -5,3 +5,4 @@ VITE_AUTH_URL=https://localhost:8080
 VITE_I18N_LOCALE=en
 VITE_I18N_FALLBACK_LOCALE=en
 VITE_I18N_STOP_USER_LOCALE=false
+VITE_WARN_MISSING_TRANSLATION=true
