--- a/development/security-server-k8/deployment/charts/security_server/values.yaml
+++ b/development/security-server-k8/deployment/charts/security_server/values.yaml
@@ -3,25 +3,6 @@ global:
   environment: dev
 
 services:
-  config:
-    image: xroad-ss-config:latest
-    imagePullPolicy: Never
-    resources:
-      requests:
-        memory: 32Mi
-      limits:
-        memory: 256Mi
-    port: 5580
-    env:
-      SERVER_PORT: "5580"
-      XROAD_SECRET_STORE_HOST: "openbao.ss.svc.cluster.local"
-      XROAD_SECRET_STORE_SCHEME: "http"
-      XROAD_SECRET_STORE_SKIP_SSL: "true"
-    envFromSecrets:
-      - name: "XROAD_SECRET_STORE_TOKEN"
-        secretName: "xroad-token"
-        key: "XROAD_SECRET_STORE_TOKEN"
-
   confclient:
     image: xroad-ss-confclient:latest
     imagePullPolicy: Never
@@ -31,12 +12,11 @@ services:
       limits:
         memory: 320Mi
     port: 5799
-    dependencies:
-      - config
+#    dependencies:
+#      - config
     env:
       SERVER_PORT: "5799"
-      XROAD_CONFIG_SERVER_URI: "http://config:5580"
-      XROAD_HOST: "confclient"
+      XROAD_HOST: "confclient.ss.svc.cluster.local"
       XROAD_SECRET_STORE_HOST: "openbao.ss.svc.cluster.local"
       XROAD_SECRET_STORE_SCHEME: "http"
       XROAD_SECRET_STORE_SKIP_SSL: "true"
@@ -54,12 +34,11 @@ services:
       limits:
         memory: 320Mi
     port: 5699
-    dependencies:
-      - config
+#    dependencies:
+#      - config
     env:
       SERVER_PORT: "5699"
-      XROAD_CONFIG_SERVER_URI: "http://config:5580"
-      XROAD_HOST: "signer"
+      XROAD_HOST: "signer.ss.svc.cluster.local"
       XROAD_SECRET_STORE_HOST: "openbao.ss.svc.cluster.local"
       XROAD_SECRET_STORE_SCHEME: "http"
     envFromSecrets:
@@ -77,12 +56,11 @@ services:
         memory: 512Mi
     port: 5599
     dependencies:
-      - config
+#      - config
       - signer
     env:
       SERVER_PORT: "5599"
-      XROAD_CONFIG_SERVER_URI: "http://config:5580"
-      XROAD_HOST: "proxy"
+      XROAD_HOST: "proxy.ss.svc.cluster.local"
       XROAD_SECRET_STORE_HOST: "openbao.ss.svc.cluster.local"
       XROAD_SECRET_STORE_SCHEME: "http"
     envFromSecrets:
@@ -99,12 +77,12 @@ services:
         memory: 512Mi
     port: 4000
     debugPort: 9999
-    dependencies:
-      - config
+#    dependencies:
+#      - config
     env:
       SERVER_PORT: "4000"
       DEBUG_PORT: "9999"
-      XROAD_CONFIG_SERVER_URI: "http://config:5580"
+      XROAD_HOST: "ui.ss.svc.cluster.local"
       XROAD_SECRET_STORE_HOST: "openbao.ss.svc.cluster.local"
       XROAD_SECRET_STORE_SCHEME: "http"
     envFromSecrets:
