--- a/src/common/common-properties/src/main/resources/xroad-common.yaml
+++ b/src/common/common-properties/src/main/resources/xroad-common.yaml
@@ -10,8 +10,7 @@ spring:
       scheme: ${XROAD_SECRET_STORE_SCHEME:https}
       token: ${XROAD_SECRET_STORE_TOKEN}
       kv:
-        enabled: true
-        backend: xrd-secret
+        enabled: false
 
 logging:
   level:
