--- a/src/common/common-properties/src/main/resources/xroad-ss-common.yaml
+++ b/src/common/common-properties/src/main/resources/xroad-ss-common.yaml
@@ -4,4 +4,12 @@ xroad:
   common:
     global-conf:
       source: REMOTE
+    serverconf:
+      hibernate:
+        connection.username: "${secret-serverconf.username}"
+        connection.password: "${secret-serverconf.password}"
+  messagelog:
+    hibernate:
+      connection.username: "${secret-messagelog.username}"
+      connection.password: "${secret-messagelog.password}"
 
