--- a/src/settings.gradle
+++ b/src/settings.gradle
@@ -93,6 +93,7 @@ include 'security-server:edc:extensions:control-plane:xroad-edr'
 include 'security-server:edc:extensions:control-plane:xroad-policy'
 include 'security-server:edc:extensions:control-plane:xroad-identity-and-trust'
 include 'security-server:edc:extensions:data-plane:xroad-data-plane-iam'
+include 'security-server:edc:extensions:data-plane:xroad-policy'
 include 'security-server:edc:extensions:data-plane:xroad-data-plane-public-api'
 include 'security-server:edc:extensions:data-plane:xroad-messagelog'
 include 'security-server:edc:extensions:identity-hub:xroad-identity-hub-provisioner'
