--- a/src/packages/src/xroad/ubuntu/generic/xroad-monitor.service
+++ b/src/packages/src/xroad/ubuntu/generic/xroad-monitor.service
@@ -2,7 +2,7 @@
 Description=X-Road Monitor
 After=network.target xroad-base.service
 Requires=xroad-base.service
-Wants=postgresql.service xroad-configuration-service.service
+Wants=postgresql.service
 
 [Service]
 User=xroad
