chore: fully drop cloud config server in favor or separate config source

--- a/ansible/vars_files/ss_modules.yml
+++ b/ansible/vars_files/ss_modules.yml
@@ -39,3 +39,9 @@ ss_modules:
     lib: proxy-ui-api-1.0.jar
     target: /usr/share/xroad/jlib
     service: xroad-proxy-ui-api
+  ds-control-plane:
+    dir: security-server/ds/runtime/control-plane
+    build: build
+    lib: ds-control-plane-1.0.jar
+    target: /usr/share/xroad/jlib
+    service: xroad-ds-control-plane
