--- a/src/security-server/ds/runtime/identity-hub/src/main/resources/application-secret-store.yaml
+++ b/src/security-server/ds/runtime/identity-hub/src/main/resources/application-secret-store.yaml
@@ -2,9 +2,18 @@ spring:
   config:
     import:
       - vault://xrd-secret/ds-identity-hub?prefix=secret-ds.
+      - vault://xrd-secret/serverconf?prefix=secret-serverconf.
 
 edc:
   datasource:
     default:
       user: "${secret-ds#username}"
       password: "${secret-ds#password}"
+
+
+xroad:
+  common:
+    serverconf:
+      hibernate:
+        connection.username: "${secret-serverconf.username}"
+        connection.password: "${secret-serverconf.password}"
