chore: add service start rate limiters for DS services

--- a/src/packages/src/xroad/ubuntu/generic/xroad-ds-credential-service.service
+++ b/src/packages/src/xroad/ubuntu/generic/xroad-ds-credential-service.service
@@ -3,6 +3,8 @@ Description=X-Road DS Credential Service
 After=network.target
 Wants=postgresql.service
 Wants=xroad-signer.service xroad-ds-identity-hub.service
+StartLimitBurst=3
+StartLimitIntervalSec=90
 
 [Service]
 User=xroad
