--- a/src/packages/src/xroad/ubuntu/generic/xroad-ds-data-plane.service
+++ b/src/packages/src/xroad/ubuntu/generic/xroad-ds-data-plane.service
@@ -3,6 +3,8 @@ Description=X-Road DS Data Plane
 After=network.target
 Wants=postgresql.service
 Wants=xroad-signer.service
+StartLimitBurst=3
+StartLimitIntervalSec=90
 
 [Service]
 User=xroad
