--- a/src/packages/src/xroad/ubuntu/generic/xroad-ds-identity-hub.service
+++ b/src/packages/src/xroad/ubuntu/generic/xroad-ds-identity-hub.service
@@ -4,6 +4,8 @@ After=network.target
 Wants=postgresql.service
 Wants=xroad-signer.service
 Wants=xroad-secret-store-local.service xroad-secret-store-remote.service
+StartLimitBurst=3
+StartLimitIntervalSec=90
 
 [Service]
 User=xroad
