chore: add initial place for native deployment edc config

--- a/src/packages/src/xroad/common/base/etc/xroad/services/global.conf
+++ b/src/packages/src/xroad/common/base/etc/xroad/services/global.conf
@@ -81,6 +81,12 @@ if [ -f "/etc/xroad/services/secret-store-local.conf" ]; then
   source /etc/xroad/services/secret-store-local.conf
 fi
 
+setDataSpaceEnv() {
+#  TODO xroad8, edc context must be refactored
+  export EDC_HOSTNAME=$(hostname)
+}
+
 load_from_properties
 detect_deployment_type
+setDataSpaceEnv
 
