chore: fix incorrect secret path

--- a/src/security-server/ds/runtime/identity-hub/src/main/resources/application-secret-store.yaml
+++ b/src/security-server/ds/runtime/identity-hub/src/main/resources/application-secret-store.yaml
@@ -7,8 +7,8 @@ spring:
 edc:
   datasource:
     default:
-      user: "${secret-ds#username}"
-      password: "${secret-ds#password}"
+      user: "${secret-ds.username}"
+      password: "${secret-ds.password}"
 
 
 xroad:
