chore: improve secrets path naming

--- a/src/addons/messagelog/messagelog-archiver/application/src/main/resources/application-secret-store.yaml
+++ b/src/addons/messagelog/messagelog-archiver/application/src/main/resources/application-secret-store.yaml
@@ -1,11 +1,11 @@
 spring:
   config:
     import:
-      - vault://xrd-secret/messagelog?prefix=secret-messagelog.
+      - vault://xrd-secret/messagelog?prefix=secrets.messagelog.
 
 xroad:
   common:
   messagelog:
     hibernate:
-      connection.username: "${secret-messagelog.username}"
-      connection.password: "${secret-messagelog.password}"
+      connection.username: "${secrets.messagelog.username}"
+      connection.password: "${secrets.messagelog.password}"
