--- a/src/proxy/application/src/main/resources/application-secret-store.yaml
+++ b/src/proxy/application/src/main/resources/application-secret-store.yaml
@@ -1,16 +1,16 @@
 spring:
   config:
     import:
-      - vault://xrd-secret/serverconf?prefix=secret-serverconf.
-      - vault://xrd-secret/messagelog?prefix=secret-messagelog.
+      - vault://xrd-secret/serverconf?prefix=secrets.serverconf.
+      - vault://xrd-secret/messagelog?prefix=secrets.messagelog.
 
 xroad:
   common:
     serverconf:
       hibernate:
-        connection.username: "${secret-serverconf.username}"
-        connection.password: "${secret-serverconf.password}"
+        connection.username: "${secrets.serverconf.username}"
+        connection.password: "${secrets.serverconf.password}"
   messagelog:
     hibernate:
-      connection.username: "${secret-messagelog.username}"
-      connection.password: "${secret-messagelog.password}"
+      connection.username: "${secrets.messagelog.username}"
+      connection.password: "${secrets.messagelog.password}"
