--- a/src/security-server/ds/runtime/control-plane/src/main/resources/application-secret-store.yaml
+++ b/src/security-server/ds/runtime/control-plane/src/main/resources/application-secret-store.yaml
@@ -1,18 +1,18 @@
 spring:
   config:
     import:
-      - vault://xrd-secret/ds-control-plane?prefix=secret-ds.
-      - vault://xrd-secret/serverconf?prefix=secret-serverconf.
+      - vault://xrd-secret/ds-control-plane?prefix=secrets.ds.
+      - vault://xrd-secret/serverconf?prefix=secrets.serverconf.
 
 edc:
   datasource:
     default:
-      user: "${secret-ds.username}"
-      password: "${secret-ds.password}"
+      user: "${secrets.ds.username}"
+      password: "${secrets.ds.password}"
 
 xroad:
   common:
     serverconf:
       hibernate:
-        connection.username: "${secret-serverconf.username}"
-        connection.password: "${secret-serverconf.password}"
+        connection.username: "${secrets.serverconf.username}"
+        connection.password: "${secrets.serverconf.password}"
