--- a/src/central-server/ds-catalog-service/src/main/resources/application-secret-store.yaml
+++ b/src/central-server/ds-catalog-service/src/main/resources/application-secret-store.yaml
@@ -1,10 +1,10 @@
 spring:
   config:
     import:
-      - vault://xrd-secret/ds-control-plane?prefix=secret-ds.
+      - vault://xrd-secret/ds-control-plane?prefix=secrets.ds.
 
 edc:
   datasource:
     default:
-      user: "${secret-ds.username}"
-      password: "${secret-ds.password}"
+      user: "${secrets.ds.username}"
+      password: "${secrets.ds.password}"
