--- a/src/security-server/admin-service/application/src/main/resources/application-secret-store.yaml
+++ b/src/security-server/admin-service/application/src/main/resources/application-secret-store.yaml
@@ -1,11 +1,11 @@
 spring:
   config:
     import:
-      - vault://xrd-secret/serverconf?prefix=secret-serverconf.
+      - vault://xrd-secret/serverconf?prefix=secrets.serverconf.
 
 xroad:
   common:
     serverconf:
       hibernate:
-        connection.username: "${secret-serverconf.username}"
-        connection.password: "${secret-serverconf.password}"
+        connection.username: "${secrets.serverconf.username}"
+        connection.password: "${secrets.serverconf.password}"
