--- a/src/security-server/ds/runtime/data-plane/src/main/resources/application-secret-store.yaml
+++ b/src/security-server/ds/runtime/data-plane/src/main/resources/application-secret-store.yaml
@@ -3,12 +3,7 @@ spring:
     import:
       - vault://xrd-secret/ds-data-plane?prefix=secrets.ds.
       - vault://xrd-secret/serverconf?prefix=secrets.serverconf.
-
-edc:
-  datasource:
-    default:
-      user: "${secrets.ds.username}"
-      password: "${secrets.ds.password}"
+      - vault://xrd-secret/messagelog?prefix=secrets.messagelog.
 
 xroad:
   common:
@@ -16,3 +11,24 @@ xroad:
       hibernate:
         connection.username: "${secrets.serverconf.username}"
         connection.password: "${secrets.serverconf.password}"
+  messagelog:
+    hibernate:
+      connection.username: "${secrets.messagelog.username}"
+      connection.password: "${secrets.messagelog.password}"
+
+
+      xroad:
+        common:
+          serverconf:
+            hibernate:
+              connection.username: "${secrets.serverconf.username}"
+              connection.password: "${secrets.serverconf.password}"
+        messagelog:
+
+
+
+edc:
+  datasource:
+    default:
+      user: "${secrets.ds.username}"
+      password: "${secrets.ds.password}"
