feat: message log encryption for multiple attachments
Refs: XRDDEV-2687

--- a/src/addons/messagelog/messagelog-db/build.gradle
+++ b/src/addons/messagelog/messagelog-db/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
     implementation(project(':common:common-db'))
+    implementation(project(':common:common-message'))
     implementation(project(':common:common-messagelog'))
     implementation libs.bouncyCastle.bcpkix
     implementation libs.slf4j.api
