--- a/src/central-server/ds-catalog-service/src/main/resources/application.yml
+++ b/src/central-server/ds-catalog-service/src/main/resources/application.yml
@@ -12,6 +12,10 @@ xroad:
 
 #EDC conf
 edc:
+  extension:
+    spring-bridge:
+      serverconf:
+        enabled: false
   hostname: ${EDC_HOSTNAME}
   datasource:
     default:
