--- a/src/security-server/ds/runtime/identity-hub/src/main/resources/application.yaml
+++ b/src/security-server/ds/runtime/identity-hub/src/main/resources/application.yaml
@@ -5,20 +5,6 @@ spring:
 server:
   port: 5798
 
-xroad:
-  common:
-    serverconf:
-      cache-period: 60
-      client-cache-size: 100
-      service-cache-size: 1000
-      acl-cache-size: 100_000
-      hibernate:
-        dialect: ee.ria.xroad.common.db.CustomPostgreSQLDialect
-        connection.driver_class: org.postgresql.Driver
-        connection.url: jdbc:postgresql://127.0.0.1:5432/serverconf
-        hikari.dataSource.currentSchema: serverconf,public
-        jdbc.use_streams_for_binary: true
-
 #EDC conf
 edc:
   hostname: ${EDC_HOSTNAME}
@@ -26,7 +12,7 @@ edc:
   extension:
     spring-bridge:
       serverconf:
-        enabled: true
+        enabled: false
   datasource:
     default:
       url: jdbc:postgresql://127.0.0.1:5432/ds-identity-hub
