feat: As a Developer I want that the Test CA provides a better support for ACME so that it's easier to test ACME-related features locally.
moved acme2certifier conf to single place

refs: XRDDEV-2691

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,6 +28,8 @@ permissions:
 concurrency:
   group: ${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
+env:
+  XROAD_HOME: ${{ github.workspace }}
 jobs:
   BuildAndPackageWithUnitTests:
     name: Build, test and package code
