--- a/development/acme2certifier/acme_srv.cfg
+++ b/development/acme2certifier/acme_srv.cfg
@@ -12,7 +12,7 @@ issuing_ca_key: /home/ca/CA/private/ca.key.pem
 #issuing_ca_key_passphrase:
 issuing_ca_cert: /home/ca/CA/certs/ca.cert.pem
 issuing_ca_crl: /home/ca/CA/crl/ca.crl.pem
-#cert_validity_days: 30
+cert_validity_days: 30
 #cert_validity_adjust: True
 cert_save_path: /home/ca/CA/newcerts
 ca_cert_chain_list: ["/home/ca/CA/certs/ca.cert.pem"]
@@ -29,7 +29,6 @@ eab_profiling: True
 eab_handler_file: examples/eab_handler/kid_profile_handler.py
 key_file: examples/eab_handler/kid_profiles.json
 
-
 [DBhandler]
 #dbfile: /var/lib/acme/db.sqlite3
 
@@ -44,3 +43,6 @@ challenge_validation_disable: False
 [Order]
 tnauthlist_support: False
 header_info_list: ["HTTP_USER_AGENT"]
+
+[Renewalinfo]
+renewaltreshold_pctg: 90
