chore: Enable serverconf for SS IH

--- a/src/security-server/ds/runtime/identity-hub/src/main/resources/application-secret-store.yaml
+++ b/src/security-server/ds/runtime/identity-hub/src/main/resources/application-secret-store.yaml
@@ -8,3 +8,17 @@ edc:
     default:
       user: "${secrets.ds.username}"
       password: "${secrets.ds.password}"
+
+---
+spring:
+  config:
+    activate:
+      on-profile: ss
+    import:
+      - vault://xrd-secret/serverconf?prefix=secrets.serverconf.
+xroad:
+  common:
+    serverconf:
+      hibernate:
+        connection.username: "${secrets.serverconf.username}"
+        connection.password: "${secrets.serverconf.password}"
