--- a/development/security-server-k8/deployment/charts/security_server/config/application-kubernetes.yaml
+++ b/development/security-server-k8/deployment/charts/security_server/config/application-kubernetes.yaml
@@ -1,18 +1,12 @@
-spring:
-  cloud:
-    vault:
-      uri: http://openbao:8200
-      token: 00000000-0000-0000-0000-000000000001
-
 xroad:
   messagelog:
     hibernate:
       connection.driver_class: org.postgresql.Driver
       connection.url: jdbc:postgresql://db-messagelog:5432/messagelog
       connection.username: messagelog
-#      if password is provided, DB context will be created, but there is no
-#      messagelog hibernate cfg file on classpath, so it will fail.
-#      connection.password: secret
+      #      if password is provided, DB context will be created, but there is no
+      #      messagelog hibernate cfg file on classpath, so it will fail.
+      #      connection.password: secret
       hikari.dataSource.currentSchema: messagelog,public
       jdbc.use_streams_for_binary: true
   common:
@@ -25,23 +19,14 @@ xroad:
     rpc:
       channel:
         configuration-client:
-          host: confclient
+          host: configuration-client.ss.svc.cluster.local
         proxy:
-          host: proxy
+          host: proxy.ss.svc.cluster.local
         signer:
-          host: signer
-  configuration-client:
-    grpc:
-      listen-address: 0.0.0.0
-  proxy:
-    grpc:
-      listen-address: 0.0.0.0
-  signer:
-    grpc:
-      listen-address: 0.0.0.0
+          host: signer.ss.svc.cluster.local
   proxy-ui-api:
     security-server-url: https://proxy:8443
 logging:
   level:
-    org.xroad: DEBUG
+    org.niis.xroad: DEBUG
     ee.ria.xroad: DEBUG
