--- a/development/security-server-k8/deployment/charts/security_server/templates/services/all.yaml
+++ b/development/security-server-k8/deployment/charts/security_server/templates/services/all.yaml
@@ -1,6 +1,11 @@
+{{- include "xroad.configmap.spring.common" (dict "root" $) }}
 {{- range $service, $config := .Values.services }}
 ---
-{{- include "xroad.configmap" (dict "root" $ "service" $service "config" $config) }}
+{{- include "xroad.serviceaccount" (dict "root" $ "service" $service "config" $config) }}
+---
+{{- include "xroad.configmap.env" (dict "root" $ "service" $service "config" $config) }}
+---
+{{- include "xroad.configmap.spring" (dict "root" $ "service" $service "config" $config) }}
 ---
 {{- include "xroad.service" (dict "root" $ "service" $service "config" $config) }}
 ---
