--- a/development/security-server-k8/deployment/charts/security_server/values.yaml
+++ b/development/security-server-k8/deployment/charts/security_server/values.yaml
@@ -3,7 +3,7 @@ global:
   environment: dev
 
 services:
-  confclient:
+  configuration-client:
     image: xroad-ss-confclient:latest
     imagePullPolicy: Never
     resources:
@@ -12,14 +12,15 @@ services:
       limits:
         memory: 320Mi
     port: 5799
-#    dependencies:
-#      - config
+    serviceAccount:
+      annotations: { }
     env:
       SERVER_PORT: "5799"
-      XROAD_HOST: "confclient.ss.svc.cluster.local"
+      XROAD_HOST: "configuration-client.ss.svc.cluster.local"
       XROAD_SECRET_STORE_HOST: "openbao.ss.svc.cluster.local"
       XROAD_SECRET_STORE_SCHEME: "http"
       XROAD_SECRET_STORE_SKIP_SSL: "true"
+      LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_CLOUD_KUBERNETES: "TRACE"
     envFromSecrets:
       - name: "XROAD_SECRET_STORE_TOKEN"
         secretName: "xroad-token"
@@ -34,8 +35,8 @@ services:
       limits:
         memory: 320Mi
     port: 5699
-#    dependencies:
-#      - config
+    serviceAccount:
+      annotations: { }
     env:
       SERVER_PORT: "5699"
       XROAD_HOST: "signer.ss.svc.cluster.local"
@@ -55,9 +56,8 @@ services:
       limits:
         memory: 512Mi
     port: 5599
-    dependencies:
-#      - config
-      - signer
+    serviceAccount:
+      annotations: { }
     env:
       SERVER_PORT: "5599"
       XROAD_HOST: "proxy.ss.svc.cluster.local"
@@ -77,8 +77,8 @@ services:
         memory: 512Mi
     port: 4000
     debugPort: 9999
-#    dependencies:
-#      - config
+    serviceAccount:
+      annotations: { }
     env:
       SERVER_PORT: "4000"
       DEBUG_PORT: "9999"
