--- a/src/common/common-service-bootstrap/build.gradle
+++ b/src/common/common-service-bootstrap/build.gradle
@@ -12,6 +12,8 @@ dependencies {
     api("org.springframework.boot:spring-boot-starter-web")
     api("org.springframework.boot:spring-boot-starter-actuator")
 
-    api("org.springframework.cloud:spring-cloud-starter-kubernetes-client-config")
     api("org.springframework.cloud:spring-cloud-starter-vault-config")
+
+//    TODO xroad8, use separate classifier for kube.
+    api("org.springframework.cloud:spring-cloud-starter-kubernetes-client-config")
 }
