chore: SERVICE_HANDLERS,SERVICE_REST_HANDLERS refactored
Refs: XRDDEV-2798

--- a/src/addons/metaservice/build.gradle
+++ b/src/addons/metaservice/build.gradle
@@ -39,8 +39,7 @@ tasks.register('runMetaserviceTest', JavaExec) {
         '-Dxroad.proxy.client-connector-so-linger=-1',
         '-Dxroad.proxy.client-httpclient-so-linger=-1',
         '-Dxroad.proxy.server-connector-so-linger=-1',
-        '-Dxroad.proxy.serverServiceHandlers=ee.ria.xroad.proxy.serverproxy.MetadataServiceHandlerImpl',
-//        '-Dxroad.proxy.addon.metaservices.enabled=true',
+// default       '-Dxroad.proxy.addon.metaservices.enabled=true',
         '-Dxroad.proxy.grpc-tls-enabled=false',
         '-Dtest.queries.dir=src/test/queries'
 
