--- a/src/packages/src/xroad/common/proxy/etc/xroad/services/proxy.conf
+++ b/src/packages/src/xroad/common/proxy/etc/xroad/services/proxy.conf
@@ -7,8 +7,6 @@ XROAD_LOG_LEVEL="DEBUG"
 
 . /etc/xroad/services/global.conf
 
-SERVICE_HANDLERS=""
-
 for addon in "${ADDON_PATH}"/proxy/*.conf
 do
  if [ -e "${addon}" ]; then
@@ -20,7 +18,6 @@ CP="/usr/share/xroad/jlib/proxy.jar"
 
 XROAD_PROXY_PARAMS=" -Xms100m -Xmx512m -XX:MaxMetaspaceSize=135m \
 -Djavax.net.ssl.sessionCacheSize=10000 \
--Dxroad.proxy.serverServiceHandlers=${SERVICE_HANDLERS#?} \
--Dxroad.proxy.serverRestServiceHandlers=${SERVICE_REST_HANDLERS#?} $XROAD_PROXY_PARAMS"
+$XROAD_PROXY_PARAMS"
 
 apply_local_conf XROAD_PROXY_PARAMS
