--- a/src/proxy/application/build.gradle
+++ b/src/proxy/application/build.gradle
@@ -15,6 +15,8 @@ dependencies {
     implementation project(':serverconf')
     implementation(project(':addons:metaservice'))
     implementation(project(':addons:messagelog:messagelog-addon:asic'))
+    implementation(project(':addons:proxymonitor-metaservice'))
+    implementation(project(':addons:op-monitoring'))
 
     testImplementation(libs.hsqldb)
     testImplementation(libs.restAssured)
