--- a/development/security-server-k8/deployment/charts/openbao_init/templates/role.yaml
+++ b/development/security-server-k8/deployment/charts/openbao_init/templates/role.yaml
@@ -5,4 +5,4 @@ metadata:
 rules:
   - apiGroups: [ "" ]
     resources: [ "secrets" ]
-    verbs: [ "get", "create", "update" ]
+    verbs: [ "get", "create", "update", "list" ]
