chore: Security Server installation manual for RHEL updated with PostgreSQL instructions
Refs: XRDDEV-2974

--- a/ansible/roles/xroad-ss/tasks/rhel.yml
+++ b/ansible/roles/xroad-ss/tasks/rhel.yml
@@ -28,6 +28,17 @@
   tags:
     - install-xroad-ss-packages
 
+- name: Install PostgreSQL packages (RHEL)
+  become: yes
+  yum:
+    name: "{{ items }}"
+    state: present
+  vars:
+    items:
+      - postgresql-server
+      - postgresql-contrib
+  when: not ((database_admin_password is defined) and (database_admin_password != ""))
+
 # verify presence of xroad packages and dependencies
 - name: install xroad packages and dependencies from set up repository (RHEL)
   yum:
