chore: signer hwtoken addon refactor
Refs: XRDDEV-2798

--- a/src/signer/application/build.gradle
+++ b/src/signer/application/build.gradle
@@ -9,6 +9,8 @@ dependencies {
     implementation project(':common:common-rpc')
     implementation project(':signer:core')
 
+    implementation project(':addons:hwtoken')
+
     testImplementation(libs.springBoot.starterTest)
 }
 
